# GameTheory

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cfr.cpp  cfr.h  cfrm.cpp  dice.cpp  kuhn.cpp  play.cpp  play.h  play_main.cpp
website/: index.html  package.json  webpack.config.js
website/js/: index.es6.js  liar_bot.es6.js
website/static/: index.css
